[gd_scene load_steps=8 format=1]

[ext_resource path="res://cutscenes/intro/Opening1.png" type="Texture" id=1]
[ext_resource path="res://cutscenes/intro/intro.gd" type="Script" id=2]
[ext_resource path="res://cutscenes/intro/voice.wav" type="Sample" id=3]
[ext_resource path="res://cutscenes/intro/music.gd" type="Script" id=4]
[ext_resource path="res://cutscenes/intro/Opening2.png" type="Texture" id=5]
[ext_resource path="res://cutscenes/intro/Opening3.png" type="Texture" id=6]

[sub_resource type="SampleLibrary" id=1]

samples/reid_h_cooper_music_cue = {
"db": 17.5765,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}

[node name="bg" type="Sprite"]

transform/pos = Vector2( 961.328, 543.678 )
z/z = 1
texture = ExtResource( 1 )
script/script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 11.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]

process_mode = 1
wait_time = 22.0
one_shot = true
autostart = true

[node name="Timer3" type="Timer" parent="."]

process_mode = 1
wait_time = 29.0
one_shot = true
autostart = true

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0
script/script = ExtResource( 4 )

[node name="DFAF" type="Sprite" parent="."]

transform/pos = Vector2( 0, 0.00012207 )
z/z = 4
texture = ExtResource( 1 )

[node name="Godot" type="Sprite" parent="."]

transform/pos = Vector2( 0, 0.00012207 )
z/z = 3
texture = ExtResource( 5 )

[node name="Adventure" type="Sprite" parent="."]

transform/pos = Vector2( -3.42468, -6.84961 )
z/z = 2
texture = ExtResource( 6 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]


